--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -1014,6 +1014,15 @@
   {
     "descriptors": [
       {
+        "defaultMessage": "Bot",
+        "id": "account.badges.bot"
+      }
+    ],
+    "path": "app/javascript/mastodon/features/account/components/account_badge.json"
+  },
+  {
+    "descriptors": [
+      {
         "defaultMessage": "Click to add a note",
         "id": "account_note.placeholder"
       },
@@ -1231,14 +1240,6 @@
       {
         "defaultMessage": "Domain blocked",
         "id": "account.domain_blocked"
-      },
-      {
-        "defaultMessage": "Bot",
-        "id": "account.badges.bot"
-      },
-      {
-        "defaultMessage": "Group",
-        "id": "account.badges.group"
       },
       {
         "defaultMessage": "Joined",
